--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>Zaczynamy!!!</h1>
 	<div id="board" class="board">
         <h1>Kanban board</h1>
-        <button class="create-column">Add a column</button>
+        <button class="create-column">Dodaj nową kolumnę</button>
         <div class="column-container"></div>
 	</div>
 
